# phonk-trigger

./: README.md  config_phonk.json  install.sh  phonk_script.py  pyproject.toml
