[tool.poetry]
name = "editkde"
version = "0.1.0"
description = ""
authors = ["Lueyo <84575656+lueyo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pynput = "^1.8.1"
pygame = "^2.6.1"
pillow = "^12.0.0"
pyautogui = "^0.9.54"
pyqt5 = "^5.15.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
